// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the CommentsList component. Should match snapshot loading comments. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-28"
  >
    <div
      class="card-title text-dial-gray-dark mb-3"
    >
      Comments
    </div>
    <div
      class="bg-edit p-6"
    >
      <div
        class="h-[60vh]"
      >
        <div
          class="flex bg-dial-alice-blue h-full"
        >
          <div
            class="text-button-gray text-lg w-full my-auto flex flex-col gap-4"
          >
            <svg
              class="spinner mx-auto"
              fill="currentColor"
              height="3em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="3em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
              />
            </svg>
            <div
              class="text-center mt-5"
            >
              Fetching data ...
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="cancel-button"
          data-testid="close-button"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the CommentsList component. Should match snapshot with comments. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-28"
  >
    <div
      class="card-title text-dial-gray-dark mb-3"
    >
      Comments
    </div>
    <div
      class="bg-edit p-6"
    >
      <div
        class="flex flex-col gap-3"
      >
        <div
          class="bg-white border border-dial-gray shadow-md"
        >
          <div
            class="flex flex-row flex-wrap gap-x-8 p-4 items-center"
          >
            <div
              class="inline-flex gap-x-2 items-center text-dial-gray-dark font-bold self-start"
            >
              <img
                alt="Logo for: user1"
                class="rounded-full w-8"
                src="https://ui-avatars.com/api/name=user1&background=random"
              />
              user1
            </div>
            <div
              class="flex-1 text-justify"
            >
              <p>
                1
              </p>
            </div>
            <button
              class="delete-button gap-x-1.5"
              data-testid="delete-button"
              type="button"
            >
              <svg
                class="text-sm"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
                />
              </svg>
              <span
                class="text-sm"
              >
                Delete
              </span>
            </button>
          </div>
          <div
            class="pl-10 p-3 flex flex-col gap-3"
          >
            <div
              class="bg-white border border-dial-gray shadow-md border-l-4"
            >
              <div
                class="flex flex-row flex-wrap gap-x-8 p-4 items-center"
              >
                <div
                  class="inline-flex gap-x-2 items-center text-dial-gray-dark font-bold self-start"
                >
                  <img
                    alt="Logo for: user2"
                    class="rounded-full w-8"
                    src="https://ui-avatars.com/api/name=user2&background=random"
                  />
                  user2
                </div>
                <div
                  class="flex-1 text-justify"
                >
                  <p>
                    2
                  </p>
                </div>
                <button
                  class="delete-button gap-x-1.5"
                  data-testid="delete-button"
                  type="button"
                >
                  <svg
                    class="text-sm"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
                    />
                  </svg>
                  <span
                    class="text-sm"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="cancel-button"
          data-testid="close-button"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the CommentsList component. Should match snapshot without comments. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-28"
  >
    <div
      class="card-title text-dial-gray-dark mb-3"
    >
      Comments
    </div>
    <div
      class="bg-edit p-6"
    >
      There are no comments
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="cancel-button"
          data-testid="close-button"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the CommentsList component. Should open ConfirmActionDialog after user clicks "Delete" button. 1`] = `
<div
  aria-labelledby="headlessui-dialog-title-:r2:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="confirm-action-dialog"
  id="headlessui-dialog-:r0:"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center p-4"
  >
    <div
      class="
 inline-block w-4/5 md:w-3/5 lg:w-3/5 xl:w-1/2 p-8
 transform bg-white shadow-xl rounded-2xl p-8 ease-out duration-300 opacity-0 scale-95"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:r1:"
    >
      <h2
        class="card-title pb-3 text-xl xl:text-2xl text-dial-sapphire"
        data-headlessui-state="open"
        id="headlessui-dialog-title-:r2:"
      >
        <span
          data-testid="title"
        >
          Deleting a comment
        </span>
      </h2>
      <span
        class="flex flex-col pb-3"
        data-testid="message"
      >
        Are you sure you want to delete this comment?
      </span>
      <div
        class="flex justify-center sm:justify-end gap-3 text-xl"
      >
        <button
          class="submit-button"
          data-testid="confirm-button"
          type="button"
        >
          Confirm
        </button>
        <button
          class="cancel-button"
          data-testid="cancel-button"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
